--- a/template/out.html
+++ b/template/out.html
@@ -1,29 +1,6 @@
-<!doctype html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/scss/styles.css" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://unpkg.com/bs-brain@2.0.3/tutorials/timelines/timeline-4/assets/css/timeline-4.css">
-    <link rel="shortcut icon" type="image/x-icon"
-        href="https://drive.google.com/thumbnail?id=1GuMFF-kcPvJgxGtR_TvPKlJOr_etjK1A&sz=s800">
-    <title>Khairul Ikhwan</title>
-</head>
-
-<body>
-
-    <div class="container mt-4">
-
-        <div class="container mb-5">
-            <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
-                <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg"> <img class="rounded-lg-3"
-                        src="https://drive.google.com/thumbnail?id=192Ws8QNLWOjOIbowdUlCebxqSajDftCX&sz=s800" alt=""
-                        width="630"> </div>
-                <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-
-                    
+{% block content %}
 <h1>Developer's Guide<img src='https://cdn.rawgit.com/miyuchina/mistletoe/master/resources/logo.svg' align='right' width='128' height='128'></h1>
 <p>This document describes usage of mistletoe and its API
 from the developer's point of view.</p>
@@ -290,96 +267,4 @@ blocks and other tokens where line breaks matter. To use this feature,
 specify a <code>max_line_length</code> parameter in the call to the <code>MarkdownRenderer</code>
 constructor.</p>
 
-
-
-                </div>
-            </div>
-        </div>
-
-        <div class="row pb-4">
-            <div class="col"></div>
-            <div class="col-6">
-                <ul class="nav justify-content-around nav-pills nav-justified" id="pills-tab" role="tablist">
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link active fw-bold" id="pills-home-tab" data-bs-toggle="pill"
-                            data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home"
-                            aria-selected="true">Experiences</button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link fw-bold" id="pills-profile-tab" data-bs-toggle="pill"
-                            data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile"
-                            aria-selected="false">Projects</button>
-                    </li>
-                </ul>
-            </div>
-            <div class="col"></div>
-        </div>
-
-        <div class="tab-content" id="pills-tabContent">
-
-            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab"
-                tabindex="0">
-                <section class="bsb-timeline-4">
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-md-10">
-                                <ul id="timeline_list" class="timeline">
-                                    <li class="timeline-item left">
-                                        <div class="timeline-body">
-                                            <div class="timeline-meta">
-                                                <div class="d-inline-flex">
-                                                    <span class="text-light">
-                                                        Released on 2 Feb 2024
-                                                    </span>
-                                                </div>
-                                            </div>
-                                            <div class="timeline-content">
-                                                <div class="card ">
-                                                    <div class="card-body p-xl-2">
-                                                        <h2 class="card-title mb-4">
-                                                            This is the timeline
-                                                        </h2>
-                                                        <p>
-                                                            It shows the journey
-                                                        </p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-            </div>
-
-            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab"
-                tabindex="0">
-                <div id="projects_list" class="row row-cols-1 row-cols-md-2 g-4 mb-5">
-                    <div class="col">
-                        <div class="card h-100">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a longer card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                            </div>
-                            <div class="card-footer">
-                                <small class="text-body-secondary">Last updated 3 mins ago</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-    </div>
-
-
-
-    <script> src = "main.js"</script>
-</body>
-
-</html>
+{% endblock content %}
